--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-openai-whisper
-gradio
-sentence-transformers
-transformers
-faiss-cpu
-nltk
-numpy
-torch
+faster-whisper==0.10.0
+sentence-transformers==2.2.2
+transformers==4.41.1
+faiss-cpu==1.7.4
+gradio==4.36.1
+torch==2.2.2
+torchaudio==2.2.2
+nltk==3.8.1
